# CUTracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE-BSD  Makefile  README.md  format.sh  install_third_party.sh  pr.md  readme.md  test_add.py  vectoradd.cu
.ci/: run_tests.sh  setup-base.sh  setup.sh  test_trace_format_clp.sh
.claude/skills/debug-data-race/: SKILL.md
.claude/skills/debug-hanging-kernel/: SKILL.md
.claude/skills/debug-kernel/: SKILL.md
.github/workflows/: check-nvbit-update.yml  cleanup-stale-pr-branches.yml  nightly-pypi.yml  sync-wiki.yml  test.yml  test_install_cuda.yml
docs/: API-and-Data-Structures.md  Analyses.md  Architecture.md  Build-Test-and-CI.md  Code-Formatting.md  Concepts.md  Configuration.md  Developer-Guide.md  Examples.md  FAQ.md  Home.md  Instrumentation-Modes.md  Outputs-and-File-Formats.md  Post-processing-IPC-Merge.md  Quickstart.md  Triton_Proton-Integration.md  Troubleshooting.md  _Sidebar.md
examples/proton_trace/: README.md  example_hist.csv
include/: analysis.h  common.h  delay_inject_config.h  env_config.h  implicit_regs.h  instr_category.h  instr_trace.h  instrument.h  log.h  log_handle.h  python_callstack.h  trace_writer.h  warp_status.h
python/: DESIGN.md  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
python/cutracer/: __init__.py  __main__.py  cli.py  cutracer_logger.py  kernel_config.py  runner.py  shared_vars.py  types.py
python/cutracer/analysis/: __init__.py  cli.py  grouper.py  reader.py  warp_summary.py
python/cutracer/analyze/: __init__.py  cli.py  common.py
python/cutracer/debugger/: __init__.py  cuda_hang_analysis.py  serialization.py  types.py
python/cutracer/query/: __init__.py  cli.py  clp.py  formatters.py  grouper.py  reader.py  sass.py  warp_summary.py
python/cutracer/reduce/: __init__.py  cli.py  config_mutator.py  reduce.py  report.py
python/cutracer/validation/: __init__.py  cli.py  clp_validator.py  compression.py  consistency.py  json_validator.py  schema_loader.py  schemas.py  text_validator.py
python/cutracer/validation/schemas/: delay_config.schema.json  kernel_metadata.schema.json  mem_trace.schema.json  opcode_only.schema.json  reg_trace.schema.json
python/tests/: __init__.py  conftest.py  test_analyze_cli.py  test_base.py  test_cli.py  test_clp.py  test_compression.py  test_consistency.py  test_formatters.py  test_grouper.py  test_json_validator.py  test_query_cli.py  test_query_cli_clp.py  test_reader.py  test_reduce.py  test_reduce_cli.py  test_runner.py  test_sass.py  test_schemas.py  test_text_validator.py  test_warp_summary.py
python/tests/example_inputs/: invalid_schema.ndjson  invalid_syntax.ndjson  kernel_events_sample.ndjson  reg_trace_sample.ndjson  reg_trace_sample.ndjson.zst  sample.clp
python/tests/example_inputs/reg_trace_sample.clp/: 50887ef7-5278-4814-af0c-3a80deb5d305
python/tests/example_inputs/reg_trace_sample.clp/fd809cd7-b56c-468c-919a-2dbdb4501daf/: 0  array.dict  header  log.dict  schema_ids  schema_tree  table_metadata  var.dict
scripts/: check_warp_barriers.py  install_cuda.sh  killgpu.sh  parse_instr_hist_trace.py  setup_local_skills.sh  validate_trace.py
src/: analysis.cu  cutracer.cu  delay_inject_config.cu  env_config.cu  inject_funcs.cu  instrument.cu  log.cu  log_handle.cu  main.cu  python_callstack.cpp  trace_writer.cpp  warp_status.cu
src/tool_func/: flush_channel.cu
tests/datarace_test/: blackwell-fa-ws_data_race_test.py  cutracer_reduce_test.sh  hopper-gemm-ws_data_race_test.py  test_random_delay_e2e.py
tests/hang_test/: hopper_matmul_kernel_tlx_ws.py  test_hang.py  test_hang2.py  test_hang_e2e.py
tests/proton_tests/: 06-fused-attention-updated.py  README.md  readme.md  vector-add-instrumented.py
tests/py_add/: test_add.py  test_py_add_e2e.py
tests/unit/: Makefile  test_cubin_dump.cpp  test_cudagraph.cpp  test_instr_category  test_instr_category.cpp
tests/vectoradd/: Makefile  vectoradd.cu
tests/vectoradd_smem/: Makefile  vectoradd_smem.cu
tests/warp_spec/: test_warp_specialization.py
tmp/: pr_configurable_zstd.md  pr_summary.md
tutorial/: README.md  ipc_parser_example.py
