# Copyright (c) Meta Platforms, Inc. and affiliates.

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutracer"
dynamic = ["version"]
description = "Python tools for CUTracer trace validation and analysis"
requires-python = ">=3.10"
authors = [
    {name = "CUTracer Contributors"}
]
readme = "README.md"
license = "MIT"

dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/facebookresearch/CUTracer"
"Bug Tracker" = "https://github.com/facebookresearch/CUTracer/issues"

# Note: CLI entry points can be added when cutracer.cli module is implemented
# [project.scripts]
# validate-trace = "cutracer.cli:main"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.setuptools.packages.find]
include = ["cutracer*"]

[tool.setuptools.package-data]
"cutracer.validation.schemas" = ["*.json"]

[tool.ufmt]
formatter = "black"
sorter = "usort"

[tool.usort]
first_party_detection = false

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --color=yes"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
