# Copyright (c) Meta Platforms, Inc. and affiliates.

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutracer"
dynamic = ["version"]
description = "Python tools for CUTracer trace validation and analysis"
requires-python = ">=3.10"
authors = [
    {name = "Yueming Hao", email = "yhao@meta.com"}
]
readme = "README.md"
license = "MIT"

dependencies = [
    "click>=8.0.0",
    "jsonschema>=4.0.0",
    "zstandard>=0.20.0",
    "tabulate>=0.9.0",
    "importlib_resources>=5.0.0; python_version < '3.11'",
    "tritonparse>=0.4.0",
    "yscope_clp_core>=0.7.1b2"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ufmt==2.9.0",
    "usort==1.1.0",
    "ruff-api==0.2.0",
    "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/facebookresearch/CUTracer"
"Bug Tracker" = "https://github.com/facebookresearch/CUTracer/issues"

[project.scripts]
cutraceross = "cutracer.cli:main"

[tool.setuptools.packages.find]
include = ["cutracer*"]

[tool.setuptools.package-data]
"cutracer.validation.schemas" = ["*.json"]

[tool.ufmt]
formatter = "ruff-api"
sorter = "usort"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.usort]
first_party_detection = false

[tool.setuptools_scm]
root = ".."
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
